<resources>
    <string name="app_name">M&amp;S Version 0.3</string>

    <string name="welcome">TATA HOUSING</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="title_activity_login_dialog">LoginDialog</string>
    <string name="option1">Log Sale</string>
    <string name="option2">View Dashboard</string>
    <string name="thnorth">TH - North</string>
    <string name="theast">TH - East</string>
    <string name="thwest">TH - West</string>
    <string name="thsouth">TH - South</string>
    <string name="tvhnorth">TVH - North</string>
    <string name="tvheast">TVH - East</string>
    <string name="tvhwest">TVH - West</string>
    <string name="tvhsouth">TVH - South</string>
    <string name="cust_name">Customer Name:</string>
    <string name="enter_cust_name">Enter Customer Name</string>
    <string name="units_sold">No. of Units Sold:</string>
    <string name="enter_units_sold">Enter Number</string>
    <string name="unit_value">Unit Value:</string>
    <string name="enter_unit_value">Enter Value (in Rs.Crs)</string>
    <string name="proj_name">Project Name</string>
    <string name="update_sales">Update Sale</string>
    <string name="occupation">Occupation:</string>
    <string name="enter_occupation">Service/ Business/ Others</string>
    <string name="cust_source">Customer Source:</string>
    <string name="enter_cust_source">Online/ Walkin/ CP</string>
    <string name="cust_information">Comments:</string>
    <string name="enter_cust_information">Cust likes/dislikes, etc.</string>
    <string name="radio_all">All Projects</string>
    <string name="radio_th">Tata Housing</string>
    <string name="radio_tv">Tata Value</string>
    <string name="check_north">North</string>
    <string name="check_east">East</string>
    <string name="check_west">West</string>
    <string name="check_south">South</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_view_projects">ViewProjects</string>
    <string name="title_activity_exp_list_adapter">ExpListAdapter</string>
    <string name="title_activity_view_individual_projects">ViewIndividualProjects</string>
    <string name="title_activity_update_sales">UpdateSales</string>
    <string name="title_activity_submit_page">SubmitPage</string>
    <string name="title_activity_submit_display">Submit</string>
    <string name="title_activity_select_parameters">Select Parameters</string>

    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>

    <string name="select_brand">Select Brand</string>
    <string name="select_region">Select Region</string>
    <string name="select_project">Select Project</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_sel_para">Select Parameters</string>
</resources>
