<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ffffffff"
    tools:context="com.mycompany.msversion03.UpdateSales">

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/proj_name"
            android:text="@string/proj_name"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0px" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/cust_name"
            android:text="@string/cust_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_cust_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_cust_name"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableSoS"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/cust_source"
            android:text="@string/cust_source"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_cust_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_cust_source"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/units_sold"
            android:text="@string/units_sold"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_units_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_units_sold"/>
    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/unit_value"
            android:text="@string/unit_value"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_unit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_unit_value"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/occupation"
            android:text="@string/occupation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_occupation"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableComments"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <TextView
            android:id="@+id/cust_information"
            android:text="@string/cust_information"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/enter_cust_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0px"
            android:hint="@string/enter_cust_information"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start">
        <Button
            android:id="@+id/submit_data"
            android:text="@string/update_sales"
            android:onClick="updateSls"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/UserHidden"
            android:textSize="0dp"/>
    </TableRow>

</LinearLayout>
