<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id = "@+id/activity_view_proj"
    android:layout_centerInParent="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="#ffffffff"
    android:paddingTop="10dp"
    android:layout_gravity="center"
    tools:context=".ViewProjects">

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="TH"
            android:id="@+id/textView" />
        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="TVH"
            android:id="@+id/textView2"/>
    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/thnorth"
            android:id="@+id/button1"
            android:onClick="openProjects"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvhnorth"
            android:id="@+id/button5"
            android:onClick="openProjects"/>
    </TableRow>
    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/theast"
            android:id="@+id/button2"
            android:onClick="openProjects"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvheast"
            android:id="@+id/button6"
            android:onClick="openProjects"/>
    </TableRow>

    <TableRow
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/thwest"
            android:id="@+id/button3"
            android:onClick="openProjects"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvhwest"
            android:id="@+id/button7"
            android:onClick="openProjects"/>
    </TableRow>
    <TableRow
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/thsouth"
            android:id="@+id/button4"
            android:onClick="openProjects"/>
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvhsouth"
            android:id="@+id/button8"
            android:onClick="openProjects"/>
    </TableRow>
</LinearLayout>
